Add RGB theme option with corresponding color values for clock display

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <option value="christmas">Christmas</option>
             <option value="halloween">Halloween</option>
             <option value="flowerpower">Flower Power</option>
+            <option value="rgb">RGB</option>
         </select>
     </div>
     <div class="clock-container">
@@ -230,6 +231,11 @@
                 seconds: [330, 95, 80, 70, 55, 40, 28, 18, 28, 40, 55, 70, 80],  // Hot pink
                 minutes: [60, 100, 75, 65, 50, 35, 25, 15, 25, 35, 50, 65, 75],  // Bright yellow
                 hours: [280, 90, 70, 60, 45, 32, 22, 12, 22, 32, 45, 60, 70]     // Vibrant purple
+            },
+            rgb: {
+                seconds: [0, 100, 60, 50, 40, 30, 20, 12, 20, 30, 40, 50, 60],   // Red
+                minutes: [120, 100, 60, 50, 40, 30, 20, 12, 20, 30, 40, 50, 60], // Green
+                hours: [240, 100, 60, 50, 40, 30, 20, 12, 20, 30, 40, 50, 60]    // Blue
             }
         };
 
