Add privacy policy page and link in the clock info section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
         <div class="ring hours-ring"></div>
         <div class="time-display">00:00:00</div>
     </div>
-    <div class="info">Cool Color Clock - Time expressed through color</div>
+    <div class="info">
+        Cool Color Clock - Time expressed through color
+        <br>
+        <a href="privacy.html" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; font-size: 12px; margin-top: 8px; display: inline-block;">Privacy Policy</a>
+    </div>
 
     <script>
         let timeFormat = null; // null = hidden, 'military' = 24-hour, 'ampm' = 12-hour with AM/PM
